--- a/ngui/ui/public/manifest.json
+++ b/ngui/ui/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "OptScale",
-  "name": "OptScale",
+  "short_name": "OptiCloud",
+  "name": "OptiCloud",
   "icons": [
     {
       "src": "favicon.ico",
